poc/tests/errors/test_FplUndeclaredVariable_inheritance.fpl
TestNamespace
{
    theory
    {
        class Zero: obj
        {
            k: obj[m]
        }
    }
}

##############################

FplUndeclaredVariable:7:20: The name 'm' does not exist in the current context